<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/layout_activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="350dp"
            android:layout_marginBottom="60dp"
            android:textSize="45dp"
            android:textAllCaps="true"
            android:letterSpacing="0.05"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="Welcome To\nKuniyakino" />

        <EditText
            android:id="@+id/inputLoginEmail"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:ems="20"
            android:hint="Email"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:ems="20"
            android:hint="Password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/loginButton"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/black"
            android:onClick="onLogin"
            android:text="Login" />

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:onClick="onCreateAccount"
            android:text="Create an account" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>